--- a/config-yml/block.block.messages.yml
+++ b/config-yml/block.block.messages.yml
@@ -8,7 +8,7 @@ dependencies:
     - nblce_lib_unb_ca
 id: messages
 theme: nblce_lib_unb_ca
-region: nav_additional
+region: content
 weight: -1
 provider: null
 plugin: system_messages_block
