--- a/config-yml/nblce_lib_unb_ca.settings.yml
+++ b/config-yml/nblce_lib_unb_ca.settings.yml
@@ -4,13 +4,14 @@ features:
   comment_user_verification: 1
   favicon: 1
 logo:
-  use_default: 1
+  use_default: 0
+  path: themes/custom/nblce_lib_unb_ca/nblce-logo.png
 favicon:
   use_default: 1
 b4_top_container: container
 b4_body_schema: none
 b4_body_bg_schema: none
-b4_navbar_schema: dark
+b4_navbar_schema: none
 b4_navbar_bg_schema: none
 b4_footer_schema: none
 b4_footer_bg_schema: none
