NBLCE-69 Configure slogan for site branding

--- a/config-yml/system.site.yml
+++ b/config-yml/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 842a4c70-3da8-41a9-8948-9dbec80be2bd
 name: NBLCE
 mail: admin@example.com
-slogan: ''
+slogan: 'New Brunswick Literature Curriculum in English'
 page:
   403: ''
   404: ''
