NBLCE-69 Add PT Sans googlefont to theme

--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
@@ -1,4 +1,5 @@
 global-styling:
   css:
     theme:
+      '//fonts.googleapis.com/css?family=PT+Sans&display=swap': {  type: external, minified: true }
       dist/css/style.css: { minified: true }
