--- a/config-yml/core.entity_view_display.node.basic_page.default.yml
+++ b/config-yml/core.entity_view_display.node.basic_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.basic_page.body
+    - field.field.node.basic_page.field_module
     - node.type.basic_page
   module:
     - text
@@ -16,13 +17,14 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  field_module: true
