--- a/config-yml/core.entity_view_display.node.basic_page.teaser.yml
+++ b/config-yml/core.entity_view_display.node.basic_page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.basic_page.body
+    - field.field.node.basic_page.field_module
     - node.type.basic_page
   module:
     - text
@@ -27,4 +28,5 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-hidden: {  }
+hidden:
+  field_module: true
