NBLCE-72 Purge taxonomy-based framework (Modules sidebar)

--- a/config-yml/core.entity_view_display.node.basic_page.default.yml
+++ b/config-yml/core.entity_view_display.node.basic_page.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.node.basic_page.body
-    - field.field.node.basic_page.field_module
     - node.type.basic_page
   module:
     - text
@@ -26,5 +25,4 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_module: true
+hidden: {  }
