--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -49,6 +49,9 @@ settings:
   plugins:
     language:
       language_list: un
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: default
     stylescombo:
       styles: ''
     codemirror:
