NBLCE-36 Add content types for Basic/Author/Module pages

--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -24,7 +24,9 @@ module:
   image: 0
   link: 0
   linkit: 0
+  menu_entity_index: 0
   menu_ui: 0
+  nblce_core: 0
   node: 0
   options: 0
   page_cache: 0
