--- a/config-yml/node.type.basic_page.yml
+++ b/config-yml/node.type.basic_page.yml
@@ -12,7 +12,7 @@ third_party_settings:
     parent: 'modules-content:'
 name: 'Basic page'
 type: basic_page
-description: 'Use basic pages for your static content, such as an ''About'' or ''Resources'' page.'
+description: 'Use basic pages for your static content, such as an <b>About</b> or <b>Resources</b> page.'
 help: ''
 new_revision: true
 preview_mode: 1
