NBLCE-69 Import proper bold font, purge bold text-shadow

--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
@@ -1,5 +1,5 @@
 global-styling:
   css:
     theme:
-      '//fonts.googleapis.com/css?family=PT+Sans&display=swap': {  type: external, minified: true }
+      '//fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap': {  type: external, minified: true }
       dist/css/style.css: { minified: true }
