NBLCE-69 Add Montserrat Googlefont, add/use font variables, font-size adjustments

--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
@@ -1,5 +1,7 @@
 global-styling:
   css:
+    base:
+      '//fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap': { type: external }
+      '//fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap': {  type: external }
     theme:
-      '//fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap': {  type: external, minified: true }
       dist/css/style.css: { minified: true }
