NBLCE-69 Subtheme appearance settings config update

--- a/config-yml/nblce_lib_unb_ca.settings.yml
+++ b/config-yml/nblce_lib_unb_ca.settings.yml
@@ -15,3 +15,6 @@ b4_navbar_schema: none
 b4_navbar_bg_schema: none
 b4_footer_schema: none
 b4_footer_bg_schema: none
+subtheme_folder: ''
+subtheme_name: ''
+subtheme_machine_name: ''
