--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -55,6 +55,7 @@ theme:
   classy: 0
   bootstrap4: 0
   nblce_lib_unb_ca: 0
+  claro: 0
 profile: nblce
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
