--- a/config-yml/core.entity_form_display.node.basic_page.default.yml
+++ b/config-yml/core.entity_form_display.node.basic_page.default.yml
@@ -74,4 +74,5 @@ content:
       match_limit: 10
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  menu_entity_index: true
