NBLCE-36 Update Author page > Sort Name > Help text

--- a/config-yml/field.field.node.author_page.field_sort_name.yml
+++ b/config-yml/field.field.node.author_page.field_sort_name.yml
@@ -10,7 +10,7 @@ field_name: field_sort_name
 entity_type: node
 bundle: author_page
 label: 'Sort Name'
-description: "Typically,  author's name in <tt> Lastname, Firstname</tt> format.<br>\r\nAutomatically derived from the <b>Author Name</b> value upon <b>Save</b> if left empty.<br>\r\n<b>Tip:</b>  Remember to <i class=\"action-link--danger\">clear this field</i> or <i class=\"action-link--danger\">manually update it</i> after editing the <b>Author Name</b> value."
+description: "<p>If left empty, automatically computed on <b>Save</b> into <tt> Lastname, Firstname</tt> format using the <b>Author Name</b> value.</p>\r\n<ul>\r\n<li><i class=\"action-link--danger\">Fill in this field</i> to <b>override</b> a sort name that shouldn't use <tt> Lastname, Firstname</tt> format, <b>eg.</b> an organization name</li>\r\n<li><i class=\"action-link--danger\">Clear this field</i> after <b>changing</b> the <b>Author Name</b> field to have it regenerate from the new value</li>\r\n</ul>"
 required: false
 translatable: false
 default_value: {  }
