--- a/config-yml/node.type.author_page.yml
+++ b/config-yml/node.type.author_page.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_title_help_text
 third_party_settings:
   menu_ui:
     available_menus:
       - modules-content
     parent: 'modules-content:'
+  node_title_help_text:
+    title_help: '<b>eg.</b> Tony Tremblay'
 name: 'Author page'
 type: author_page
 description: 'Use author pages for your author resource pages, such as <b>Passamaquoddy</b> or <b>Bliss Carmen</b> page.'
