NBLCE-89 Add Styles CKEditor button + add styles to plugin settings

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -20,6 +20,7 @@ settings:
             - Bold
             - Italic
             - RemoveFormat
+            - Styles
         -
           name: Lists
           items:
@@ -53,7 +54,7 @@ settings:
       linkit_enabled: true
       linkit_profile: default
     stylescombo:
-      styles: ''
+      styles: "span.ml-3|small tab (inline)\r\nspan.ml-5|medium tab (inline)\r\nspan.indent-lg|large tab (inline)\r\nspan.subtitle|Subtitle"
     codemirror:
       enable: true
       startupMode: wysiwyg
