--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -55,7 +55,7 @@ settings:
       linkit_enabled: true
       linkit_profile: default
     stylescombo:
-      styles: "span.ml-3|Small tab (inline)\r\nspan.ml-5|Medium tab (inline)\r\nspan.indent-lg|Large tab (inline)\r\nspan.subtitle|Subtitle\r\np.biblio|Further reading"
+      styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\np.biblio|Further reading"
     codemirror:
       enable: true
       startupMode: wysiwyg
