--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.info.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.info.yml
@@ -20,3 +20,6 @@ regions:
   sidebar_first: 'Sidebar first'
   sidebar_second: 'Sidebar second'
   footer: Footer
+
+ckeditor_stylesheets:
+  - dist/css/style.css
