--- a/deployment/k8s/prod/deployment.yaml
+++ b/deployment/k8s/prod/deployment.yaml
@@ -35,6 +35,8 @@ spec:
         vcsRepository: nblce.lib.unb.ca
         vcsRef: prod
     spec:
+      nodeSelector:
+        deployenv: prod
       containers:
         -
           name: nblce-lib-unb-ca
