--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -13,24 +13,24 @@ settings:
     rows:
       -
         -
-          name: Formatting
+          name: 'Block Formatting'
           items:
             - Format
-            - Blockquote
+        -
+          name: Formatting
+          items:
             - Bold
             - Italic
-            - RemoveFormat
-            - Styles
-        -
-          name: Lists
-          items:
-            - BulletedList
-            - NumberedList
         -
           name: Links
           items:
             - DrupalLink
             - DrupalUnlink
+        -
+          name: Lists
+          items:
+            - BulletedList
+            - NumberedList
         -
           name: Alignment
           items:
@@ -40,9 +40,15 @@ settings:
         -
           name: Misc
           items:
+            - Blockquote
+            - SpecialChar
             - Table
             - HorizontalRule
-            - SpecialChar
+        -
+          name: Custom
+          items:
+            - Styles
+            - RemoveFormat
         -
           name: Tools
           items:
@@ -55,7 +61,7 @@ settings:
       linkit_enabled: true
       linkit_profile: default
     stylescombo:
-      styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\np.biblio|Further reading"
+      styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\np.biblio|Hanging indent"
     codemirror:
       enable: true
       startupMode: wysiwyg
