NBLCE-100 Add superscript button to Toolbar's Formnatting group

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -21,6 +21,7 @@ settings:
           items:
             - Bold
             - Italic
+            - Superscript
         -
           name: Links
           items:
