--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -25,8 +25,9 @@ settings:
         -
           name: Links
           items:
-            - DrupalLink
-            - DrupalUnlink
+            - Link
+            - Unlink
+            - Anchor
         -
           name: Lists
           items:
