NBLCE-100 Add List indent/outdent CKEditor Toolbar buttons

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -33,6 +33,8 @@ settings:
           items:
             - BulletedList
             - NumberedList
+            - Outdent
+            - Indent
         -
           name: Alignment
           items:
