NBLCE-89 Add custom lower alpha+roman list styles to Toolbar

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -61,11 +61,8 @@ settings:
   plugins:
     language:
       language_list: un
-    drupallink:
-      linkit_enabled: true
-      linkit_profile: default
     stylescombo:
-      styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\nspan.subtitle|Subtitle\r\np.biblio|Hanging indent"
+      styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\nspan.subtitle|Subtitle\r\np.biblio|Hanging indent\r\nli.list-item-compact|Tight list item\r\nol.list-lower-alpha|List lower alpha\r\nol.list-lower-roman|List lower roman"
     codemirror:
       enable: true
       startupMode: wysiwyg
