--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -10,4 +10,5 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'opt-in or out of google analytics tracking'
   - 'use text format full_html'
