--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -12,3 +12,4 @@ permissions:
   - 'access content'
   - 'opt-in or out of google analytics tracking'
   - 'use text format full_html'
+  - 'view media'
