--- a/config-yml/core.entity_view_display.node.author_slideshow.default.yml
+++ b/config-yml/core.entity_view_display.node.author_slideshow.default.yml
@@ -14,16 +14,16 @@ mode: default
 content:
   field_slide_image:
     type: entity_reference_entity_view
-    weight: 102
-    label: above
+    weight: 0
+    label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 1
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
