--- a/config-yml/core.entity_view_display.media.slideshow_image.default.yml
+++ b/config-yml/core.entity_view_display.media.slideshow_image.default.yml
@@ -32,7 +32,7 @@ content:
     weight: 0
     settings:
       image_style: large
-      image_link: ''
+      image_link: content
     third_party_settings: {  }
     type: image
     region: content
