--- a/config-yml/node.type.author_slideshow.yml
+++ b/config-yml/node.type.author_slideshow.yml
@@ -7,15 +7,14 @@ dependencies:
     - node_title_help_text
 third_party_settings:
   menu_ui:
-    available_menus:
-      - main
-    parent: 'main:'
+    available_menus: {  }
+    parent: ''
   node_title_help_text:
     title_help: ''
 name: 'Author Slideshow'
 type: author_slideshow
 description: 'Used to create the front page <em>featured authors</em> slideshow.'
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 0
-display_submitted: true
+display_submitted: false
