--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -27,6 +27,7 @@ module:
   help: 0
   history: 0
   image: 0
+  language: 0
   link: 0
   media: 0
   media_library: 0
@@ -45,7 +46,8 @@ module:
   rdf: 0
   redis: 0
   samlauth: 0
-  search: 0
+  search_api: 0
+  search_api_solr: 0
   slick: 0
   slick_ui: 0
   slick_views: 0
