NBLCE-54 Configure exposed search form in sidebar region

--- a/config-yml/block.block.pagetitle.yml
+++ b/config-yml/block.block.pagetitle.yml
@@ -2,6 +2,8 @@ uuid: fa373a39-92cc-45b6-874d-38967afafc7d
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - nblce_lib_unb_ca
 id: pagetitle
@@ -15,4 +17,9 @@ settings:
   label: 'Page title'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '/search*'
+    negate: true
+    context_mapping: {  }
