NBLCE-54 Add search UI improvements (CSS + JS)

--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.libraries.yml
@@ -5,3 +5,7 @@ global-styling:
       '//fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap': {  type: external }
     theme:
       dist/css/style.css: { minified: true }
+  js:
+    dist/js/search.js: {}
+  dependencies:
+    - core/jquery
