NBLCE-84 Add 3-char minimum to search query

--- a/config-yml/views.view.search_content.yml
+++ b/config-yml/views.view.search_content.yml
@@ -303,18 +303,21 @@ display:
             placeholder: 'Search content ...'
           is_grouped: false
           group_info:
-            label: ''
-            description: ''
-            identifier: ''
+            label: 'Fulltext search'
+            description: null
+            identifier: search_api_fulltext
             optional: true
             widget: select
             multiple: false
             remember: false
             default_group: All
             default_group_multiple: {  }
-            group_items: {  }
+            group_items:
+              1: {  }
+              2: {  }
+              3: {  }
           parse_mode: terms
-          min_length: null
+          min_length: 3
           fields: {  }
           plugin_id: search_api_fulltext
       sorts:
