NBLCE-104 Add LinkIt button and set profile for Full HTML text format

--- a/config-yml/editor.editor.full_html.yml
+++ b/config-yml/editor.editor.full_html.yml
@@ -28,6 +28,7 @@ settings:
             - Link
             - Unlink
             - Anchor
+            - Linkit
         -
           name: Lists
           items:
@@ -59,10 +60,10 @@ settings:
             - Source
             - Maximize
   plugins:
-    language:
-      language_list: un
     stylescombo:
       styles: "span.ml-3|Small tab\r\nspan.ml-5|Medium tab\r\nspan.indent-lg|Large tab\r\nspan.subtitle|Subtitle\r\np.biblio|Hanging indent\r\nli.list-item-compact|Tight list item\r\nol.list-lower-alpha|List lower alpha\r\nol.list-lower-roman|List lower roman\r\nul.list-no-bullets|List unbulleted"
+    language:
+      language_list: un
     codemirror:
       enable: true
       startupMode: wysiwyg
@@ -80,6 +81,8 @@ settings:
         autoFormatOnStart: true
         autoFormatOnModeChange: true
         autoFormatOnUncomment: true
+    linkit:
+      linkit_profile: default_linkit_profile
 image_upload:
   status: false
   scheme: public
