NBLCE-103 Use BS4 print display classes: fixes safari + sidebar

--- a/config-yml/views.view.featured_authors_slick_carousel.yml
+++ b/config-yml/views.view.featured_authors_slick_carousel.yml
@@ -279,6 +279,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      css_class: d-print-none
     cache_metadata:
       max-age: 0
       contexts:
