--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,6 @@ services:
   nblce.lib.unb.ca:
     build:
       context: .
-      args:
-        - COMPOSER_DEPLOY_DEV=dev
     restart: always
     container_name: nblce.lib.unb.ca
     depends_on:
@@ -50,6 +48,7 @@ services:
     env_file:
       - ./env/drupal.env
     volumes:
+      - /app/html/sites/default
       - ./config-yml:/app/configuration
       - ./custom/modules:/app/html/modules/custom
       - ./custom/themes:/app/html/themes/custom
