--- a/config-yml/node.type.basic_page.yml
+++ b/config-yml/node.type.basic_page.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_title_help_text
 third_party_settings:
   menu_ui:
     available_menus:
       - main
     parent: 'main:'
+  node_title_help_text:
+    title_help: ''
 name: 'Basic page'
 type: basic_page
 description: 'Use basic pages for your static content, such as an <b>About</b> or <b>Resources</b> page.'
