--- a/config-yml/node.type.module_page.yml
+++ b/config-yml/node.type.module_page.yml
@@ -4,11 +4,14 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_title_help_text
 third_party_settings:
   menu_ui:
     available_menus:
       - modules-content
     parent: 'modules-content:'
+  node_title_help_text:
+    title_help: ''
 name: 'Module page'
 type: module_page
 description: 'Use module pages for your literary period or cluster''s <b>Background and Context</b> page.'
