--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require-dev": {
-    "drupal/bootstrap4": "1.0-rc4",
+    "drupal/bootstrap4": "2.1.4",
     "unb-libraries/dockworker-drupal": "~3"
   },
   "scripts": {
