--- a/.dockworker/deployment/k8s/dev/cron.yaml
+++ b/.dockworker/deployment/k8s/dev/cron.yaml
@@ -7,7 +7,8 @@ metadata:
     app: drupal
     tier: cron
 spec:
-  schedule: "*/15 * * * *"
+  schedule: "07,22,37,52 * * * *"
+  startingDeadlineSeconds: 480
   concurrencyPolicy: Forbid
   jobTemplate:
     metadata:
