--- a/custom/modules/nblce_core/nblce_core.info.yml
+++ b/custom/modules/nblce_core/nblce_core.info.yml
@@ -2,4 +2,5 @@ name: 'NBLCE Core'
 type: module
 description: 'Provides core functionality for the NBLCE site.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'UNB Libraries'
