--- a/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.info.yml
+++ b/custom/themes/nblce_lib_unb_ca/nblce_lib_unb_ca.info.yml
@@ -3,6 +3,7 @@ package: 'nblce_lib_unb_ca'
 type: theme
 description: 'Theme for nblce.lib.unb.ca'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: bootstrap4
 
 # Libraries.
