NBLCE-106 Fix content edit UI marred by D9 upgrade

--- a/custom/modules/nblce_core/nblce_core.libraries.yml
+++ b/custom/modules/nblce_core/nblce_core.libraries.yml
@@ -3,3 +3,8 @@ toolbar-overrides:
   css:
     theme:
       css/custom-toolbar.css: {}
+claro-overrides:
+  version: VERSION
+  css:
+    theme:
+      css/claro-admin-overrides.css: {}
