Post-D9 config updates

--- a/config-yml/filter.format.full_html.yml
+++ b/config-yml/filter.format.full_html.yml
@@ -47,3 +47,11 @@ filters:
       default_view_mode: default
       allowed_media_types: {  }
       allowed_view_modes: {  }
+  slick_filter:
+    id: slick_filter
+    provider: slick
+    status: false
+    weight: 4
+    settings:
+      optionset: default
+      media_switch: ''
