--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -19,6 +19,7 @@ module:
   datetime: 0
   dynamic_page_cache: 0
   editor: 0
+  externalauth: 10
   fakeobjects: 0
   field: 0
   field_ui: 0
@@ -36,8 +37,11 @@ module:
   media: 0
   media_library: 0
   menu_entity_index: 0
+  menu_link_content: 1
   menu_ui: 0
   metatag: 0
+  minimal: 1000
+  mysql: 0
   nblce_core: 0
   node: 0
   node_title_help_text: 0
@@ -46,9 +50,11 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  pathauto: 1
   quickedit: 0
   rdf: 0
   redis: 0
+  saml_features: 11
   samlauth: 0
   search_api: 0
   search_api_solr: 0
@@ -63,13 +69,8 @@ module:
   toolbar: 0
   update: 0
   user: 0
-  views_ui: 0
-  menu_link_content: 1
-  pathauto: 1
-  externalauth: 10
   views: 10
-  saml_features: 11
-  minimal: 1000
+  views_ui: 0
 theme:
   stark: 0
   stable: 0
