--- a/config-yml/core.entity_view_display.media.slideshow_image.media_library.yml
+++ b/config-yml/core.entity_view_display.media.slideshow_image.media_library.yml
@@ -34,6 +34,8 @@ content:
     settings:
       image_link: content
       image_style: medium
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
