--- a/config-yml/views.view.featured_authors_slick_carousel.yml
+++ b/config-yml/views.view.featured_authors_slick_carousel.yml
@@ -150,6 +150,8 @@ display:
           settings:
             image_link: ''
             image_style: ''
+            image_loading:
+              attribute: lazy
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -240,11 +242,11 @@ display:
           vanilla: true
           layout: ''
           cache: 0
-          current_view_mode: block_1
           skin: ''
           grid: null
           grid_medium: null
           grid_small: null
+          current_view_mode: block_1
           overridables:
             arrows: '0'
             autoplay: '0'
