--- a/config-yml/search_api.index.resources_nblce_lib_unb_ca.yml
+++ b/config-yml/search_api.index.resources_nblce_lib_unb_ca.yml
@@ -47,6 +47,9 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      specific_languages: {  }
+      use_language_undefined_as_fallback_language: false
+      use_universal_collation: false
 id: resources_nblce_lib_unb_ca
 name: resources.nblce.lib.unb.ca
 description: ''
