--- a/config-yml/search_api_solr.solr_field_type.text_ngram_und_7_0_0.yml
+++ b/config-yml/search_api_solr.solr_field_type.text_ngram_und_7_0_0.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: 6uqsWgLopdBAXIzy2SwBKR3p6a2GgNIsdteOAG9K-08
+  default_config_hash: wr_ZSGx3pe-AgupW-Sz4q3a5tyhG5E0yg6IySnGjwW8
 id: text_ngram_und_7_0_0
 label: 'NGram Text Field'
 minimum_solr_version: 7.0.0
@@ -14,6 +14,7 @@ field_type:
   name: text_ngram
   class: solr.TextField
   positionIncrementGap: 100
+  storeOffsetsWithPositions: true
   analyzers:
     -
       type: index
@@ -22,7 +23,7 @@ field_type:
           class: solr.MappingCharFilterFactory
           mapping: accents_und.txt
       tokenizer:
-        class: solr.WhitespaceTokenizerFactory
+        class: solr.StandardTokenizerFactory
       filters:
         -
           class: solr.StopFilterFactory
@@ -59,7 +60,7 @@ field_type:
           class: solr.MappingCharFilterFactory
           mapping: accents_und.txt
       tokenizer:
-        class: solr.WhitespaceTokenizerFactory
+        class: solr.StandardTokenizerFactory
       filters:
         -
           class: solr.LengthFilterFactory
