--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -51,6 +51,7 @@ module:
   search_api: 0
   search_api_solr: 0
   simple_sitemap: 0
+  simple_sitemap_views: 0
   slick: 0
   slick_ui: 0
   slick_views: 0
