--- a/config-yml/simple_sitemap.type.default_hreflang.yml
+++ b/config-yml/simple_sitemap.type.default_hreflang.yml
@@ -7,7 +7,8 @@ label: 'Default hreflang'
 description: 'The default hreflang sitemap type.'
 sitemap_generator: default
 url_generators:
-  - custom
-  - entity
-  - entity_menu_link_content
-  - arbitrary
+  custom: custom
+  entity: entity
+  arbitrary: arbitrary
+  entity_menu_link_content: entity_menu_link_content
+  views: views
