--- a/config-yml/views.view.module_list_chronological.yml
+++ b/config-yml/views.view.module_list_chronological.yml
@@ -214,7 +214,15 @@ display:
     display_plugin: page
     position: 1
     display_options:
-      display_extenders: {  }
+      display_extenders:
+        simple_sitemap_display_extender:
+          variants:
+            default:
+              index: true
+              priority: '0.5'
+              changefreq: ''
+              arguments: {  }
+              max_links: 100
       path: resources/modules
       menu:
         type: normal
