Add profile to mailhog in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
       - "4108:8025"
     networks:
       - nblce.lib.unb.ca
+    profiles:
+      - mailhog
 networks:
   nblce.lib.unb.ca:
     name: nblce.lib.unb.ca
