--- a/configuration/core.extension.yml
+++ b/configuration/core.extension.yml
@@ -70,8 +70,7 @@ module:
   saml_features: 11
   minimal: 1000
 theme:
-  stable: 0
-  classy: 0
+  stable9: 0
   bootstrap4: 0
   nblce_lib_unb_ca: 0
   claro: 0
