--- a/configuration/pathauto.pattern.module_page_rule.yml
+++ b/configuration/pathauto.pattern.module_page_rule.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: 'resources/modules/[node:title]'
 selection_criteria:
   e185d09a-f5a7-4a75-ab5b-9fc5ab5d50ec:
-    id: node_type
+    id: entity_bundle:node
     negate: false
     uuid: e185d09a-f5a7-4a75-ab5b-9fc5ab5d50ec
     context_mapping:
